ingress/python_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
spec:
  type: NodePort
  selector:
    app: python-web-app
  ports:
      #kubernetes create the ip into every service,port refer to port of ip created into service from kubernetes
    - port: 8900
      # targetPort means container port,on which port of container, the application is serving
      targetPort: 8000
      #node port means,on which worker node service is deployed,that worker port
      nodePort: 30007
