ingress/wild_card_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wild-card-ingress
spec:
  rules:
  - host: "*.raghu.app"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 8090 
  - host: mypythonapp 
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: python-web-app-service
            port:
              number: 8900
